--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ img {
    height: 80px;
   width: 80px;
   border-radius: 100%;
-  margin-top: 0;
+  margin-top: 100px;
+  margin-right: 200px;
   align:right;
 }
 
